recursion.lessons.recursion.tree.Tree.scala.error
Tree:13: error: '(' expected but identifier found.
	tree(steps, length, angle, shrink) 
        ^