recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
	var p = 0
	var k = 0
	p = length/shrink
	if (Math.floor(p)!=0){
		p = p/shrink
		k = k+1
	}


	if 
	tree(steps, length, angle, shrink) 
	
	current(k)

	

	
	
	
}
